# midcone_bringup

./: README.md  package.xml  setup.cfg  setup.py
launch/: bringup.launch.py  bringup_mavros.launch.py  odom_vo.launch.py  urdf.launch.py
midcone_bringup/: lidar_bridge.py  vio_bridge.py
urdf/: drone.urdf  handheld.urdf
